# pol-real-estate

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: pipeline-cron.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_fingerprint.py  003_add_detail_fields.py  004_add_price_history_and_deactivated_at.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  admin.py  analytics.py  barrios.py  currency.py  listings.py  map.py  opportunities.py  valuation.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  barrio.py  barrio_snapshot.py  currency_rate.py  listing.py  listing_price_history.py
backend/app/schemas/: analytics.py  barrio.py  currency.py  listing.py  map.py
backend/app/scrapers/: __init__.py  argenprop.py  base.py  detail.py  pipeline.py  zonaprop.py
backend/app/services/: analytics_service.py  barrio_service.py  currency_service.py  listing_service.py  map_service.py
backend/app/tasks/: celery_app.py  currency_tasks.py  scraper_tasks.py  snapshot_tasks.py
backend/app/valuation/: __init__.py  features.py  model.py
backend/models/: valuation_rent_v1.joblib  valuation_sale_v1.joblib
backend/scripts/: scrape.py  seed.py  train_model.py
backend/tests/: conftest.py  test_api.py  test_models.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  (+1 more)
scripts/: fetch_currency.py  import_properati.py  seed_all.py  seed_barrios.py
(+31 files in other folders)
